--- a/PluginForKompas/GearCreator/GearCreator.csproj
+++ b/PluginForKompas/GearCreator/GearCreator.csproj
@@ -114,29 +114,21 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DataControl\DataControl.csproj">
       <Project>{8d31939f-2c8b-4e9c-bc87-1768a3c85ac2}</Project>
       <Name>DataControl</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Designer\SketchDesign.csproj">
-      <Project>{e270dbe4-2768-414e-a521-d8532d8286ee}</Project>
-      <Name>SketchDesign</Name>
+    <ProjectReference Include="..\Global\Global.csproj">
+      <Project>{10cca96c-60bc-4669-8905-8dc38d512dc9}</Project>
+      <Name>Global</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GlobalObject\Initialization.csproj">
-      <Project>{2d6e1e21-48cc-4c51-b77e-72885a64ba53}</Project>
-      <Name>Initialization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Model\Kompas-api.csproj">
+    <ProjectReference Include="..\Kompas-api\Kompas-api.csproj">
       <Project>{2be4a84a-e7f7-4d70-97fa-a4c2bf659a47}</Project>
       <Name>Kompas-api</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Parameter\Parameter.csproj">
-      <Project>{96f014c9-9b71-43b7-aa09-89939bd7b68b}</Project>
-      <Name>Parameter</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
