added resource file

--- a/PluginForKompas/Kompas-api/Kompas-api.csproj
+++ b/PluginForKompas/Kompas-api/Kompas-api.csproj
@@ -82,6 +82,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AxisChanger.cs" />
     <Compile Include="CircleSketch.cs" />
     <Compile Include="CircularCopyMaker.cs" />
     <Compile Include="ChamferMaker.cs">
