HAPPY NEW YEAR!!!

--- a/PluginForKompas/packages/repositories.config
+++ b/PluginForKompas/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\Designer\packages.config" />
   <repository path="..\GearCreator\packages.config" />
+  <repository path="..\Kompas-api\packages.config" />
   <repository path="..\Model\packages.config" />
 </repositories>
