--- a/PluginForKompas/Kompas-api/Kompas-api.csproj
+++ b/PluginForKompas/Kompas-api/Kompas-api.csproj
@@ -28,17 +28,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Kompas-api.XML</DocumentationFile>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CONVERTLIBINTERFACES">
       <HintPath>..\..\..\Program Files\ASCON\KOMPAS-3D V16\SDK\C#\Common\CONVERTLIBINTERFACES.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="KAPITypes">
-      <HintPath>..\..\..\Program Files\ASCON\KOMPAS-3D V16\SDK\C#\Common\KAPITypes.dll</HintPath>
-    </Reference>
-    <Reference Include="KGAXLib">
-      <HintPath>..\..\..\Program Files\ASCON\KOMPAS-3D V16\SDK\C#\Common\KGAXLib.dll</HintPath>
     </Reference>
     <Reference Include="Kompas6API2D5COM">
       <HintPath>..\..\..\Program Files\ASCON\KOMPAS-3D V16\SDK\C#\Common\Kompas6API2D5COM.dll</HintPath>
@@ -76,10 +72,7 @@
       <HintPath>..\..\..\Program Files\ASCON\KOMPAS-3D V16\SDK\C#\Common\VCHATCHLib.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="WindowsBase">
-      <Private>True</Private>
-      <HintPath>..\packages\WindowsBase.4.6.1055.0\lib\WindowsBase.dll</HintPath>
-    </Reference>
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AxisChanger.cs" />
@@ -101,6 +94,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KAPITypes\KAPITypes.csproj">
+      <Project>{3b02f815-f2e7-45a2-b828-8aa4da54d54f}</Project>
+      <Name>KAPITypes</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
